@startuml HU-08_Monitoreo_Riesgo_Alertas
title HU-08 — Monitoreo de Riesgo y Alertas (Componentes)\nDeFi360 · Sprint 1 · Release 01

skinparam componentStyle rectangle
skinparam backgroundColor #FAFAFA
skinparam component {
  BackgroundColor #F5EEF8
  BorderColor #6C3483
  FontSize 12
}
skinparam interface {
  BackgroundColor #FDEBD0
  BorderColor #E67E22
}
skinparam node {
  BackgroundColor #F2F3F4
  BorderColor #717D7E
}
skinparam database {
  BackgroundColor #D5F5E3
  BorderColor #1E8449
}
skinparam arrow {
  Color #2C3E50
  FontSize 10
}

' ─── ORQUESTADOR ────────────────────────────────────────────────
node "Backend — Core" {
  [RiskMonitoringService\n(orquesta + suscribe observers)] as RMS
  [MonitorRiesgo «Subject»\n(setInterval scheduler)] as Monitor
}

' ─── PATRÓN STRATEGY ────────────────────────────────────────────
interface "IRiskStrategy" as IRiskStrat
node "Backend — Strategies" {
  [LTVRiskStrategy] as LTVStrat
}

' ─── PATRÓN OBSERVER ────────────────────────────────────────────
interface "IRiskObserver" as IRiskObs
node "Backend — Observers" {
  [NotificationObserver] as NotifObs
  [LogObserver] as LogObs
}

' ─── ORÁCULO (fuente de precio) ─────────────────────────────────
interface "IPriceOracle" as IOracle
node "Backend — Services" {
  [priceOracle «Singleton»\nCached + Simulated] as Oracle
}

' ─── MODELO ─────────────────────────────────────────────────────
node "Backend — Domain Model" {
  [Loan] as LoanModel
}

' ─── PRUEBAS ────────────────────────────────────────────────────
node "Tests (Jest)" {
  [observerPattern.test.js] as ObsTest
  [riskIntegration.test.js] as RiskTest
  [LTVRiskStrategy.test.js] as StratTest
}

' ─── RELACIONES ─────────────────────────────────────────────────
RMS        --> Monitor      : crea MonitorRiesgo(LTVRiskStrategy)
RMS        --> NotifObs     : subscribe
RMS        --> LogObs       : subscribe

Monitor    ..> IRiskStrat   : «depends on» (Strategy inyectada)
LTVStrat   ..|> IRiskStrat  : «implements»

Monitor    --> IRiskObs     : _notifyObservers (Observer)
NotifObs   ..|> IRiskObs    : «implements»
LogObs     ..|> IRiskObs    : «implements»

Monitor    ..> IOracle      : getPrice (monitoreo periódico)
Oracle     ..|> IOracle     : «implements»

Monitor    ..> LoanModel    : evalúa loan (amount, collateralAmount)

ObsTest    --> Monitor      : prueba Observer
RiskTest   --> RMS          : prueba integración
StratTest  --> LTVStrat     : prueba Strategy

note bottom of LogObs
  Decisión de alcance: alertas y logs se mantienen en memoria
  (eventLog / sentNotifications). No hay tabla de alertas en BD
  ni EmailObserver real en Release 01.
end note

@enduml
